--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.2.0"
   },
   "dependencies": {
+    "global": "^4.3.2",
     "react": "^16.2.0",
     "webpack": "^2.6.1"
   },
